--- a/currency.css
+++ b/currency.css
@@ -6,20 +6,18 @@
   box-sizing: border-box;
   text-transform: capitalize;
 }
-
-.image {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
+body {
+  background-image: url("images/8.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
+
 .container {
   width: 90vw;
   max-width: 1200px;
-  margin: 2rem auto;
-  backdrop-filter: blur(10px);
+  margin: 1.5rem auto;
+  backdrop-filter: blur(5px);
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -63,6 +61,7 @@
 .container .change-color div:nth-child(5) {
   background-color: transparent;
   box-shadow: 0 0 5px #ff0000;
+  margin-left: 1rem;
 }
 .colorchoosen {
   scale: 1.3;
@@ -94,14 +93,14 @@
   }
 }
 form .amount {
-  margin: 1.5rem 0 2rem;
+  margin: 1.2rem 0 1.5rem;
 }
 form .amount p {
   font-size: 1rem;
 }
 form .amount input {
   width: 100%;
-  padding: 0.5rem 1rem;
+  padding: 0.4rem;
   margin-top: 0.5rem;
   outline: none;
   font-size: 1.1rem;
@@ -137,7 +136,7 @@ form .select-box {
   border: 1.3px solid #999;
   border-radius: 0.3rem;
   margin: 0.5rem 0;
-  height: 3rem;
+  height: 2.5rem;
 }
 form .select-box img {
   max-width: 3rem;
@@ -180,7 +179,38 @@ footer {
   align-items: center;
   justify-content: space-between;
   gap: 0.5rem;
+  flex-wrap: wrap;
 }
+footer a {
+  animation: mail infinite 1s;
+}
+@keyframes mail {
+  0%,
+  100% {
+    scale: 1;
+    rotate: 0deg;
+  }
+  25% {
+    scale: 1.2;
+    rotate: -15deg;
+  }
+  50% {
+    scale: 1.2;
+    rotate: 15deg;
+  }
+  75% {
+    scale: 1.2;
+    rotate: -15deg;
+  }
+}
+
 footer p:nth-child(1) {
   font-size: 0.8rem;
+}
+@media (max-width: 400px) {
+  footer {
+    flex-direction: column;
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
 }
